--- a/main.css
+++ b/main.css
@@ -59,9 +59,18 @@ li {
     padding: 10px 12px;
     border: 0;
     font-weight: bold;
+    cursor: pointer;
 }
 
 .btn-primary {
     color: var(--color-background);
     background-color: var(--color-primary);
+}
+
+.btn-primary:disabled {
+    opacity: 0.7;
+}
+
+.hidden {
+    display: none;
 }
